tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.diagnostic
diagnostic error code=O0001 family=ownership message="owning binding 'token' must be moved or dropped before return" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari" bytes=59
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari" line=3 column=3 end_line=3 end_column=9 byte_start=47 byte_end=53 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari:3:3\n   |\n 3 |   return 0;\n   |   ^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari" line=2 column=7 end_line=2 end_column=12 byte_start=25 byte_end=30 message="owning binding 'token' declared here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari:2:7\n   |\n 2 |   let token: own i64 = 7;\n   |       ^^^^^"
  Note index=0 location=none message="live owning bindings must be consumed explicitly before control leaves their scope"
  Help index=0 location=none message="drop 'token' before return or move it into the value that leaves this scope"
